examples/kubernetes_manifests/gitpanda-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitpanda
  labels:
    app: gitpanda
spec:
  selector:
    matchLabels:
      app: gitpanda
  template:
    metadata:
      labels:
        app: gitpanda
    spec:
      containers:
        - name: gitpanda
          ports:
            - containerPort: 80

          # c.f. https://github.com/sue445/gitpanda/pkgs/container/gitpanda
          image: ghcr.io/sue445/gitpanda:latest # TODO: Edit if necessary

          resources:
            requests:
              cpu: 100m
              memory: 100Mi

          livenessProbe:
            httpGet:
              port: 8000
              path: /
            failureThreshold: 5
            periodSeconds: 10

          readinessProbe:
            httpGet:
              port: 8000
              path: /
            failureThreshold: 10
            periodSeconds: 10
