examples/kubernetes_manifests/gitpanda-gke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitpanda
  annotations:
    kubernetes.io/ingress.class: "gce"

    # c.f. https://cloud.google.com/kubernetes-engine/docs/how-to/managed-certs#setting_up_the_managed_certificate
    # kubernetes.io/ingress.global-static-ip-name: gitpanda-static-ip-name # TODO: Edit this if necessary
    # networking.gke.io/managed-certificates: gitpanda-managed-cert-name # TODO: Edit this if necessary

spec:
  rules:
    - host: your-gitpanda.example.com # TODO: Edit this
      http:
        paths:
          - backend:
              service:
                name: gitpanda
                port:
                  number: 80
            path: /
            pathType: Prefix
